--- a/scss/main.scss
+++ b/scss/main.scss
@@ -1,13 +1,91 @@
-$primary-color: grey;
+$primary-color: rgb(0, 0, 0);
+$secondary-color: rgb(127, 253, 77);
+$third-color: yellow;
+$name-color: rgb(253, 68, 182);
+$show-home-background: true;
+
+@mixin easeOut{
+  transition: all 0.5s ease-out;
+}
+@mixin background{
+  @if $show-home-background {
+    &#background-img{
+      background-image: url(../dist/img/backg.jpeg);
+      background-attachment: fixed;
+    }
+  }
+}
+
+html{
+  font-size: 16px;
+}
+
+*{
+  box-sizing: border-box;
+}
 
 body{
+  @include background;
   background: $primary-color;
   color: white;
+  height:100%;
+  margin: 0;
+  font-family: 'Rajdhani', sans-serif;
+  line-height: 1.5;
 }
 i{
-  color: white;
-  margin: 10px;
+  color: $secondary-color;
+  margin-top: 1rem;
+  padding: 0.4rem;
 }
 i:hover{
-  color:pink;
+  color:rgb(0, 60, 255);
+  @include easeOut();
+}
+h1, h2, h3 {
+  margin:0;
+  font-weight: 400;
+
+  &.large-heading{
+    font-size: 6rem;
+  }
+
+  &.small-heading{
+    margin-bottom: 2rem;
+    padding: 0.2rem 1rem;
+    background: rgba(lighten($primary-color, 2), 0.5);
+  }
+}
+
+a{
+  color: $third-color;
+  text-decoration: none;
+}
+
+a:hover{
+  color:rgb(255, 123, 0);
+  @include easeOut();
+}
+
+header{
+  position: fixed;
+  z-index: 2;
+  width: 100%;
+}
+
+.name{
+  color: $name-color;
+  text-shadow: 0px 0px 30px rgb(144, 43, 226);
+}
+
+main{
+  padding: 4rem;
+  height: 100%;
+
+  &.home{
+    overflow: hidden;
+    h1{
+      margin-top: 20vh;
+    }
+  }
 }
