--- a/scss/main.scss
+++ b/scss/main.scss
@@ -2,16 +2,32 @@ $primary-color: rgb(0, 0, 0);
 $secondary-color: rgb(127, 253, 77);
 $third-color: yellow;
 $name-color: rgb(253, 68, 182);
-$show-home-background: true;
+$show-home-bg: true;
+$home-bg: url(../img/purpleorange.jpeg);
+$heavy-shadow: 
+  0 0 90px black,
+  0 0 80px black,
+  0 0 70px black,
+  0 0 60px black,
+  0 0 50px black, 
+  0 0 40px black, 
+  0 0 30px black, 
+  0 0 20px black,
+  0 0 10px black;
+
 
 @mixin easeOut{
   transition: all 0.5s ease-out;
 }
 @mixin background{
-  @if $show-home-background {
-    &#background-img{
-      background-image: url(../dist/img/backg.jpeg);
+  @if $show-home-bg {
+    &.bg{
+      background-image: $home-bg;
       background-attachment: fixed;
+      background-size: cover;
+      background-position:50%;
+      background-color: rgba(5, 77, 124, 0.473);
+      background-blend-mode:color-burn;
     }
   }
 }
@@ -35,6 +51,7 @@ body{
 }
 i{
   color: $secondary-color;
+  text-shadow: $heavy-shadow;
   margin-top: 1rem;
   padding: 0.4rem;
 }
@@ -48,18 +65,23 @@ h1, h2, h3 {
 
   &.large-heading{
     font-size: 6rem;
+    text-shadow: $heavy-shadow;
   }
 
   &.small-heading{
     margin-bottom: 2rem;
     padding: 0.2rem 1rem;
     background: rgba(lighten($primary-color, 2), 0.5);
+    font-size: 1.5rem;
+    text-shadow: $heavy-shadow;
+    border-radius: 0 50px 0 50px;
   }
 }
 
 a{
   color: $third-color;
   text-decoration: none;
+  text-shadow: $heavy-shadow;
 }
 
 a:hover{
@@ -75,7 +97,7 @@ header{
 
 .name{
   color: $name-color;
-  text-shadow: 0px 0px 30px rgb(144, 43, 226);
+  text-shadow: $heavy-shadow;
 }
 
 main{
