update projects, add email to nav

--- a/scss/_config.scss
+++ b/scss/_config.scss
@@ -18,6 +18,7 @@ $heavy-shadow:
 
 @mixin easeOut{
   transition: all 0.2s ease-out;
+  cursor: crosshair;
 }
 @mixin background{
   @if $show-home-bg {
