--- a/scss/main.scss
+++ b/scss/main.scss
@@ -5,31 +5,7 @@ html{
   font-size: 16px;
 }
 
-.about{
-  text-align: center;
-  background-color: black;
 
-  .large-heading{
-    color: $secondary-color;
-  }
-  img{
-    height:300px;
-    border-radius: 50px;
-  }
-  i{
-    color: $name-color;
-    font-size: 50px;
-  }
-  i:hover{
-    color: $name-color;
-  }
-  h2{
-    padding: 10px;
-  }
-  h3{
-    font-size: 1.2em;
-  }
-}
 
 *{
   box-sizing: border-box;
@@ -105,4 +81,75 @@ main{
       margin-top: 20vh;
     }
   }
+}
+
+.about{
+  text-align: center;
+  background-color: black;
+
+  
+  .large-heading{
+    color: $secondary-color;
+  }
+  img{
+    height:300px;
+    border-radius: 200px;
+  }
+  i{
+    color: $name-color;
+    font-size: 50px;
+  }
+  i:hover{
+    color: $name-color;
+  }
+  h2{
+    padding: 10px;
+  }
+  h3{
+    font-size: 1.2em;
+  }
+}
+
+.projects{
+  text-align: center;
+
+  .large-heading{
+    color: $name-color;
+    border-bottom: 4px solid white;
+    padding: 20px;
+  }
+
+  a{
+    color: $secondary-color;
+  }
+  .main1{
+    justify-content: center;
+    align-content:center;
+  }
+  .column {
+    display: inline-block;
+    margin: auto;
+    margin: 20px;
+    font-size: medium;
+    width: 400px;
+    height:450px;
+    border-bottom: 3px solid grey;
+    padding: 5px;
+  }
+  .thumb {
+    height: 230px;
+    width: 400px;
+    object-fit: contain;
+  }
+
+  i{
+    color: yellow;
+  }
+  i:hover{
+    color:rgb(255, 123, 0);
+    @include easeOut();
+  }
+}
+.black{
+  background-color: black;
 }
