--- a/src/css/main.css
+++ b/src/css/main.css
@@ -3,7 +3,8 @@
   height: 3px;
   margin: 0 0 5px 0;
   background: yellow;
-  transition: all 0.2s ease-out; }
+  transition: all 0.2s ease-out;
+  cursor: crosshair; }
   .button-line:hover {
     background: #7ffd4d;
     text-shadow: 0 0 90px black, 0 0 80px black, 0 0 70px black, 0 0 60px black, 0 0 50px black, 0 0 40px black, 0 0 30px black, 0 0 20px black, 0 0 10px black; }
@@ -18,6 +19,7 @@
   top: 35px;
   cursor: crosshair;
   transition: all 0.2s ease-out;
+  cursor: crosshair;
   text-align: center;
   color: yellow;
   padding: 8px; }
@@ -59,37 +61,21 @@
     padding: 0;
     background-image: linear-gradient(to right, rgba(255, 255, 255, 0), rgba(65, 0, 187, 0.507));
     transform: translate3d(0, 100%, 0);
-    transition: all 0.2s ease-out; }
+    transition: all 0.2s ease-out;
+    cursor: crosshair; }
     .menu .menu-nav.show {
       transform: translate3d(0, 0, 0); }
   .menu .nav-item {
     margin-top: 10%;
     font-size: 2rem;
     list-style-type: none;
-    transition: all 0.2s ease-out; }
+    transition: all 0.2s ease-out;
+    cursor: crosshair; }
     .menu .nav-item.show {
       transform: translate3d(0, 0, 0); }
 
 html {
   font-size: 16px; }
-
-.about {
-  text-align: center;
-  background-color: black; }
-  .about .large-heading {
-    color: #7ffd4d; }
-  .about img {
-    height: 300px;
-    border-radius: 50px; }
-  .about i {
-    color: #fd44b6;
-    font-size: 50px; }
-  .about i:hover {
-    color: #fd44b6; }
-  .about h2 {
-    padding: 10px; }
-  .about h3 {
-    font-size: 1.2em; }
 
 * {
   box-sizing: border-box; }
@@ -117,7 +103,8 @@ i {
 
 i:hover {
   color: #0077ff;
-  transition: all 0.2s ease-out; }
+  transition: all 0.2s ease-out;
+  cursor: crosshair; }
 
 h1, h2, h3 {
   margin: 0;
@@ -140,7 +127,8 @@ a {
 
 a:hover {
   color: #ff7b00;
-  transition: all 0.2s ease-out; }
+  transition: all 0.2s ease-out;
+  cursor: crosshair; }
 
 header {
   position: fixed;
@@ -158,3 +146,55 @@ main {
     overflow: hidden; }
     main.home h1 {
       margin-top: 20vh; }
+
+.about {
+  text-align: center;
+  background-color: black; }
+  .about .large-heading {
+    color: #7ffd4d; }
+  .about img {
+    height: 300px;
+    border-radius: 200px; }
+  .about i {
+    color: #fd44b6;
+    font-size: 50px; }
+  .about i:hover {
+    color: #fd44b6; }
+  .about h2 {
+    padding: 10px; }
+  .about h3 {
+    font-size: 1.2em; }
+
+.projects {
+  text-align: center; }
+  .projects .large-heading {
+    color: #fd44b6;
+    border-bottom: 4px solid white;
+    padding: 20px; }
+  .projects a {
+    color: #7ffd4d; }
+  .projects .main1 {
+    justify-content: center;
+    align-content: center; }
+  .projects .column {
+    display: inline-block;
+    margin: auto;
+    margin: 20px;
+    font-size: medium;
+    width: 400px;
+    height: 450px;
+    border-bottom: 3px solid grey;
+    padding: 5px; }
+  .projects .thumb {
+    height: 230px;
+    width: 400px;
+    object-fit: contain; }
+  .projects i {
+    color: yellow; }
+  .projects i:hover {
+    color: #ff7b00;
+    transition: all 0.2s ease-out;
+    cursor: crosshair; }
+
+.black {
+  background-color: black; }
