update styles for small screens

--- a/scss/_menu.scss
+++ b/scss/_menu.scss
@@ -26,6 +26,7 @@
   text-align: center;
   color: $third-color;
   padding: 8px;
+  background-color: black;
 
   &:hover{
     color:$secondary-color;
